Fixed the spacing between cards on allwork and allposts

--- a/client/src/pages/AllWorks/AllWorks.scss
+++ b/client/src/pages/AllWorks/AllWorks.scss
@@ -6,9 +6,7 @@
   .work-cards {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    margin-top: 20px;
-    margin-bottom: 40px;
+    margin: 25px 0px;
 
     .no-works {
       height: 60vh;
@@ -24,6 +22,8 @@
       width: 450px;
       height: 300px;
       padding: 20px;
+      margin-right: 30px;
+      margin-bottom: 20px;
       border-radius: 20px;
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 
