--- a/client/src/pages/Bid/Bid.scss
+++ b/client/src/pages/Bid/Bid.scss
@@ -29,7 +29,6 @@
         }
 
         .profileandusername {
-
           display: flex;
           flex-direction: column;
           margin-left: 20px;
@@ -62,7 +61,6 @@
             }
           }
 
-
           .title {
             margin-top: auto;
             // margin-bottom: auto;
@@ -72,8 +70,6 @@
             text-transform: uppercase;
           }
         }
-
-
       }
 
       .desc {
@@ -280,6 +276,7 @@
       }
 
       .freelancers {
+        overflow: auto;
         .flex {
           display: flex;
         }
@@ -360,6 +357,19 @@
             margin-right: 10px;
           }
         }
+        &::-webkit-scrollbar {
+          width: 7px;
+        }
+
+        &::-webkit-scrollbar-thumb {
+          background: rgb(124, 185, 197);
+          border-radius: 50px;
+        }
+
+        &::-webkit-scrollbar-track {
+          background: rgb(233, 231, 231);
+          border-radius: 50px;
+        }
       }
     }
   }
@@ -379,19 +389,14 @@
     color: #4ea685;
     text-decoration: underline #4ea685;
   }
-
-
 }
 
-@media screen and (max-width:1100px) {
-
+@media screen and (max-width: 1100px) {
   // display: flex;
   .bid {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
-
 
     .bid-left {
       width: 100%;
